--- a/enkas/あ.html
+++ b/enkas/あ.html
@@ -18,6 +18,7 @@
 <a href="#安里屋ユンタ">安里屋ユンタ</a><br>
 <a href="#愛される花愛されぬ花">愛される花愛されぬ花</a><br>
 <a href="#愛して愛して愛しちゃったのよ">愛して愛して愛しちゃったのよ</a><br>
+<a href="#愛する人に歌わせないで">愛する人に歌わせないで</a><br>
 <a href="#愛のままで…">愛のままで…</a><br>
 <a href="#愛のメモリー">愛のメモリー</a><br>
 <a href="#愛をこめて花束を">愛をこめて花束を</a><br>
@@ -93,7 +94,7 @@
 あなたがいるから　私は強くなる<br>
 誓いの指輪　キラキラ　綺麗ね<br>
 You will realize　小さな夢も<br>
-Ha... You are the one　心<ruby><rb>満</rb><rt>み</rt></ruby>たされる<br>
+Ha… You are the one　心<ruby><rb>満</rb><rt>み</rt></ruby>たされる<br>
 <br>
 2 夜のハイウェイ　バイクを飛ばして<br>
 はしゃいだ　自由を　持て余すくらい<br>
@@ -103,12 +104,12 @@ Ha... You are the one　心<ruby><rb>満</rb><rt>み</rt></ruby>たされる<br>
 あの<ruby><rb>頃</rb><rt>ひ</rt></ruby>の二人に　すべて戻せるなら<br>
 <ruby><rb>跪</rb><rt>ひざまず</rt></ruby>き　石になるまで　祈るよ<br>
 We can still be free　100まで<ruby><rb>数</rb><rt>かぞ</rt></ruby>えて<br>
-Ha... Never wanna stop　心<ruby><rb>解</rb><rt>と</rt></ruby>き<ruby><rb>放</rb><rt>はな</rt></ruby>つ<br>
+Ha… Never wanna stop　心<ruby><rb>解</rb><rt>と</rt></ruby>き<ruby><rb>放</rb><rt>はな</rt></ruby>つ<br>
 <br>
 3 あなたがいるから　私は強くなる<br>
 誓いの指輪　キラキラ　綺麗ね<br>
 You will realize　小さな夢も<br>
-Ha... You are the one<br>
+Ha… You are the one<br>
 いつか<ruby><rb>叶</rb><rt>かな</rt></ruby>えられる<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
@@ -307,6 +308,30 @@ Ha... You are the one<br>
 命をかけて　命をかけて<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
+<a id="愛する人に歌わせないで">【愛する人に歌わせないで】</a>A1-A2<br>
+<br>
+1 もう泣かないで坊や　あなたは強い子でしょう<br>
+もう泣かないで坊や　ママは傍にいるの<br>
+あなたのパパは強かった　とても優しかった<br>
+だけど今は遠い　遠いところにいるの<br>
+<br>
+2 ほら見てごらん坊や　綺麗なお星様を<br>
+あれはパパなの坊や　いつもあなたを見ているの<br>
+ママはいいの一人でも　あなたが傍にいれば<br>
+だってあなたはパパの　パパの子供だから<br>
+<br>
+3 あなたのパパは坊や　私達のことを<br>
+あなたのパパは坊や　とても心配してたの<br>
+<ruby><rb>戦</rb><rt>たたか</rt></ruby>いに行くその日まで　きっと無事で帰ると<br>
+<ruby><rb>固</rb><rt>かた</rt></ruby>い約束をして　出掛けていったのに<br>
+<br>
+4 あなたのパパは坊や　あんなに云ったけれど<br>
+あなたのパパは坊や　ここに帰らないの<br>
+あなたが大きくなったら　愛する人に二度と<br>
+歌わせないで頂戴　ママの子守唄を<br>
+ママの子守唄を　ママの子守唄を<br>
+</h1><br><h3><a href="#あ">Back to Top</a></h3>
+<br><hr><br><h1>
 <a id="愛のままで…">【愛のままで…】</a>E1-<sup>b</sup>B2<br>
 <br>
 1 小鳥たちは　何を騒ぐの<br>
@@ -424,8 +449,8 @@ Ha... You are the one<br>
 <br>
 3 violet, indigo, black and blue<br>
 flame, yellow, purple, sky blue,<br>
-pink, yellow green, ash, brown......<br>
-あなたに<ruby><rb>贈</rb><rt>おく</rt></ruby>る色は......？<br>
+pink, yellow green, ash, brown……<br>
+あなたに<ruby><rb>贈</rb><rt>おく</rt></ruby>る色は……？<br>
 <br>
 3 巡り巡る時を超え<br>
 いつもあなたの所へ　と<br>
