--- a/enkas/い.html
+++ b/enkas/い.html
@@ -10,6 +10,9 @@
 い<br><br>
 <a href="#いい日旅立ち">いい日旅立ち</a><br>
 <a href="#いい日旅立ち・西へ">いい日旅立ち・西へ</a><br>
+<a href="#インターナショナル">インターナショナル</a><br>
+<a href="#一週間に十日来い">一週間に十日来い</a><br>
+<a href="#命くれない">命くれない</a><br>
 <a href="#潮来笠">潮来笠</a><br>
 <a href="#犬のおまわりさん">犬のおまわりさん</a><br>
 <a href="#異邦人">異邦人</a><br>
@@ -27,7 +30,7 @@
 あゝ　日本のどこかに<br>
 私を　待ってる　人がいる<br>
 いい日　旅立ち　夕焼けを探しに<br>
-母の背中で聞いた　歌を道連れに...<br>
+母の背中で聞いた　歌を道連れに…<br>
 <br>
 2 岬の　はずれに　少年は　魚釣り<br>
 青い<ruby><rb>芒</rb><rt>すすき</rt></ruby>の小径を　帰るのか<br>
@@ -36,12 +39,12 @@
 あゝ　日本のどこかに<br>
 私を　待ってる　人がいる<br>
 いい日　旅立ち　<ruby><rb>羊</rb><rt>ひつじ</rt></ruby>雲を探しに<br>
-父が教えてくれた　歌を道連れに...<br>
+父が教えてくれた　歌を道連れに…<br>
 <br>
 3 あゝ　日本のどこかに<br>
 私を　待ってる　人がいる<br>
 いい日　旅立ち　幸福を探しに<br>
-子供の頃に歌った　歌を道連れに...<br>
+子供の頃に歌った　歌を道連れに…<br>
 </h1><br><h3><a href="#い">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="いい日旅立ち・西へ">【いい日旅立ち・西へ】</a>E1-B2<br>
@@ -70,6 +73,111 @@
 私を待ってる人がいる<br>
 いい日　旅立ち　<ruby><rb>憧憬</rb><rt>あこがれ</rt></ruby>は風の中<br>
 今も聞こえるあの日の　歌を道連れに<br>
+</h1><br><h3><a href="#い">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="インターナショナル">【インターナショナル】</a>E1-G2<br>
+<br>
+1 <ruby><rb>起</rb><rt>た</rt></ruby>て<ruby><rb>飢</rb><rt>う</rt></ruby>えたる者よ　今ぞ日は近し<br>
+醒めよ我が<ruby><rb>同胞</rb><rt>はらから</rt></ruby>　<ruby><rb>暁</rb><rt>あかつき</rt></ruby>は来ぬ<br>
+<br>
+暴<ruby><rb>虐</rb><rt>ぎゃく</rt></ruby>の<ruby><rb>鎖</rb><rt>くさり</rt></ruby>　<ruby><rb>断</rb><rt>た</rt></ruby>つ日　<ruby><rb>旗</rb><rt>はだ</rt></ruby>は血に燃えて<br>
+海を<ruby><rb>隔</rb><rt>へだ</rt></ruby>てつ<ruby><rb>我等</rb><rt>われら</rt></ruby>　腕結びゆく<br>
+<br>
+いざ<ruby><rb>闘</rb><rt>たたか</rt></ruby>わん　いざ　<ruby><rb>奮</rb><rt>ふる</rt></ruby>い立て　いざ<br>
+あぁ　インターナショナル　我等がもの<br>
+<br>
+＊いざ踊りましょう　いざ　歌いましょう　いざ<br>
+あぁ　インターナショナルの祭りです<br>
+<br>
+<br>
+2 聞け我等が<ruby><rb>雄叫</rb><rt>おたけ</rt></ruby>び　天地<ruby><rb>轟</rb><rt>とどろ</rt></ruby>きて<br>
+<ruby><rb>屍</rb><rt>かばね</rt></ruby>越ゆる我が旗　行く手を守る<br>
+<br>
+<ruby><rb>圧制</rb><rt>あっせい</rt></ruby>の壁破りて　<ruby><rb>固</rb><rt>かた</rt></ruby>き我が<ruby><rb>腕</rb><rt>かいな</rt></ruby><br>
+今ぞ高く<ruby><rb>掲</rb><rt>かか</rt></ruby>げん　我が<ruby><rb>勝利</rb><rt>しょうり</rt></ruby>の旗<br>
+<br>
+いざ<ruby><rb>闘</rb><rt>たたか</rt></ruby>わん　いざ　<ruby><rb>奮</rb><rt>ふる</rt></ruby>い立て　いざ<br>
+あぁ　インターナショナル　我等がもの<br>
+<br>
+＊いざ踊りましょう　いざ　歌いましょう　いざ<br>
+あぁ　インターナショナルの祭りです<br>
+<br>
+＊3 いざ<ruby><rb>闘</rb><rt>たたか</rt></ruby>わん　いざ　<ruby><rb>奮</rb><rt>ふる</rt></ruby>い立て　いざ<br>
+あぁ　インターナショナル　我等がもの<br>
+<br>
+＊いざ踊りましょう　いざ　歌いましょう　いざ<br>
+あぁ　インターナショナルの祭りです<br>
+<br>
+＊4 <ruby><rb>起</rb><rt>た</rt></ruby>て<ruby><rb>飢</rb><rt>う</rt></ruby>えたる者よ　祭りの日は来たり<br>
+醒めよ我が<ruby><rb>楽隊</rb><rt>がくたい</rt></ruby>　<ruby><rb>暁</rb><rt>あかつき</rt></ruby>は来ぬ<br>
+<br>
+<ruby><rb>静寂</rb><rt>せいじゃく</rt></ruby>の<ruby><rb>鎖</rb><rt>くさり</rt></ruby><ruby><rb>断</rb><rt>た</rt></ruby>つひ　チンドンが響く<br>
+チャンゴを打ち鳴らせば　皆　踊り出す<br>
+<br>
+いざ<ruby><rb>闘</rb><rt>たたか</rt></ruby>わん　いざ　<ruby><rb>奮</rb><rt>ふる</rt></ruby>い立て　いざ<br>
+あぁ　インターナショナル　我等がもの<br>
+<br>
+いざ踊りましょう　いざ　歌いましょう　いざ<br>
+あぁ　インターナショナルの祭りです<br>
+あぁ　インターナショナル　我等がもの<br>
+</h1><br><h3><a href="#い">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="一週間に十日来い">【一週間に十日来い】</a>E1-C3<br>
+<br>
+1 見れば見るほど　いい男<br>
+飲みっぷりなら日本一<br>
+トコトン　トコトン<br>
+<br>
+あなた好き好き　可愛いお方<br>
+花も咲きます トコトン酒場<br>
+一週間に十日来い　トコトン　トコトン<br>
+<br>
+2 惚れちゃ駄目よと意見して<br>
+それでいつしかこうなった<br>
+トコトン　トコトン<br>
+<br>
+はしご酒なら　浮気なしょうこ<br>
+さあさ飲みましょ　トコトン酒場<br>
+一週間に十日来い　トコトン　トコトン<br>
+<br>
+3 人の前では　つれないが<br>
+胸の中では　手を合わす<br>
+トコトン　トコトン<br>
+<br>
+私一人を　責めてはいやよ<br>
+これが浮世よ　トコトン酒場<br>
+一週間に十日来い　トコトン　トコトン<br>
+<br>
+4 四角四面の　世の中を<br>
+丸く渡れば　春も来る<br>
+トコトン　トコトン<br>
+<br>
+<ruby><rb>小皿</rb><rt>こざら</rt></ruby>たたけば　手<ruby><rb>拍</rb><rt>びょう</rt></ruby>子そえて<br>
+苦労忘れる　トコトン酒場<br>
+一週間に十日来い　トコトン　トコトン<br>
+</h1><br><h3><a href="#い">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="命くれない">【命くれない】</a>E1-C3<br>
+<br>
+1 生まれる前から　結ばれていた<br>
+そんな気がする　<ruby><rb>紅</rb><rt>べに</rt></ruby>の糸<br>
+<br>
+だから死ぬまで　二人は一緒<br>
+「あなた」「おまえ」　<ruby><rb>夫婦</rb><rt>みょうと</rt></ruby>みち<br>
+命くれない　命くれない　二人<ruby><rb>連</rb><rt>づ</rt></ruby>れ<br>
+<br>
+2 人目を<ruby><rb>忍</rb><rt>しの</rt></ruby>んでで　隠れて泣いた<br>
+そんな日もある　傷もある<br>
+<br>
+苦労<ruby><rb>積</rb><rt>つみ</rt></ruby>荷の　<ruby><rb>木</rb><rt>こ</rt></ruby>の葉の舟で<br>
+「あなた」「おまえ」　あぶな川<br>
+命くれない　命くれない　二人連れ<br>
+<br>
+3 なんにもいらない　あなたがいれば<br>
+笑顔一つで　生きられる<br>
+泣く日笑う日　花咲く日まで<br>
+「あなた」「おまえ」　手を<ruby><rb>重</rb><rt>かさ</rt></ruby>ね<br>
+命くれない　命くれない　二人連れ<br>
 </h1><br><h3><a href="#い">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="潮来笠">【潮来笠】</a>C1-A2<br>
