--- a/enkas/お.html
+++ b/enkas/お.html
@@ -8,14 +8,57 @@
 <a href="..\indexenka.html" id="お">Enka Category</a><br><br>
 <h2>
 お<br><br>
+<a href="#Oh I...">Oh I...</a><br>
 <a href="#おどるポンポコリン">おどるポンポコリン</a><br>
+<a href="#おもいで酒">おもいで酒</a><br>
 <a href="#おんな港町">おんな港町</a><br>
 <a href="#お祭りマンボ">お祭りマンボ</a><br>
+<a href="#オホーツクの舟唄">オホーツクの舟唄</a><br>
 <a href="#大きな古時計">大きな古時計</a><br>
 <a href="#大井追っかけ音次郎">大井追っかけ音次郎</a><br>
 <a href="#男と女">男と女</a><br>
+<a href="#男と女のラブゲーム">男と女のラブゲーム</a><br>
 <a href="#男の火祭り">男の火祭り</a><br>
 </h2>
+<br><hr><br><h1>
+<a id="Oh I...">【Oh I...】</a>G1-A2<br>
+<br>
+1 「これでよかったのよ」<br>
+何度も言い聞かせた<br>
+<ruby><rb>抱</rb><rt>かか</rt></ruby>えきれぬ想いが<br>
+溢れない様に鍵をかけて<br>
+<br>
+黄昏映した　駅のホームでこうして<br>
+また出逢うなんて<br>
+騒ぎ出す<ruby><rb>鼓動</rb><rt>こどう</rt></ruby>おさえ切れない<br>
+<br>
+Ow Ow Why<br>
+恋の奇跡が　<ruby><rb>訪</rb><rt>おとず</rt></ruby>れたなら<br>
+あなたの腕の中へ　飛び込みたいと<br>
+夢見てたのに　一歩も動けないの<br>
+<br>
+2 もう会う事もないと<br>
+消した電話のメモリー<br>
+だけど思い出たちは<br>
+こんなに輝いていたなんて<br>
+<br>
+涙に染まった　頬が色を取り戻す<br>
+「やり直したい」と<br>
+待ちわびた言葉に震えてるの<br>
+<br>
+Oh Oh I<br>
+恋の奇跡を　信じていいの?<br>
+ためらう気持ちを　その指先で<br>
+また一つずつ　ほどいてほしいの<br>
+<br>
+3 Oh Oh I<br>
+恋の奇跡を　信じたいのよ<br>
+好きなのよ　あなたが<br>
+悲しいくらい　夢見てたから<br>
+永遠に　消えない夢を<br>
+<br>
+お願い もう二度と離れないで<br>
+</h1><br><h3><a href="#お">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="おどるポンポコリン">【おどるポンポコリン】</a>E1-A2<br>
 <br>
@@ -65,6 +108,30 @@
 ピーヒャラ　ピーヒャラ　パッパパラパ<br>
 ピーヒャラ　ピーヒャラ　踊るポンポコリン<br>
 ピーヒャラ　ピ　お<ruby><rb>腹</rb><rt>なか</rt></ruby>がへったよ<br>
+</h1><br><h3><a href="#お">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="おもいで酒">【おもいで酒】</a>A1-F3<br>
+<br>
+1 無理して飲んじゃ　いけないと<br>
+肩を優しく　抱きよせた<br>
+<br>
+あの人　どうし　ているかしら<br>
+噂をきけば　逢いたくて<br>
+おもいで酒に　<ruby><rb>酔</rb><rt>よお</rt></ruby>うばかり<br>
+<br>
+2 ボトルに別れた　日を書いて<br>
+そっと涙の　小指かむ<br>
+<br>
+あの人　どうして　いるかしら<br>
+出船の汽笛　聞きながら<br>
+おもいで酒に　酔うばかり<br>
+<br>
+3 いつかは忘れる　人なのに<br>
+飲めば未練が　またつのる<br>
+<br>
+あの人　どうして　いるかしら<br>
+暮らしも荒れた　この頃は<br>
+おもいで酒に　酔うばかり<br>
 </h1><br><h3><a href="#お">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="おんな港町">【おんな港町】</a>E1-B2<br>
@@ -154,6 +221,44 @@
 ほんに　切ない　ためいきばかり<br>
 いくら泣いても　帰らない<br>
 いくら泣いても　後の祭りよ<br>
+</h1><br><h3><a href="#お">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="オホーツクの舟唄">【オホーツクの舟唄】</a>G1-D3-升半音<br>
+<br>
+0 <ruby><rb>何地</rb><rt>いずち</rt></ruby>から吹きすさぶ　<ruby><rb>朔北</rb><rt>さくほく</rt></ruby>の吹雪よ<br>
+私の胸を刺すように　オホーツクは今日も<br>
+海鳴りの中に　明け暮れてゆく<br>
+<ruby><rb>父祖</rb><rt>ふそ</rt></ruby>の地のクナシリに<br>
+長い冬の夜があける日を<br>
+白いカモメが告げるまで<br>
+最<ruby><rb>涯</rb><rt>はて</rt></ruby>の茜の中で　私は立ちつくす<br>
+何故か　眼がしらの涙が<ruby><rb>凍</rb><rt>こお</rt></ruby>るまで<br>
+<br>
+1 オホーツクの海原　ただ白く　<ruby><rb>凍</rb><rt>い</rt></ruby>て果て<br>
+命あるものは　暗い雪の下<br>
+<br>
+春を待つ心　ペチカに燃やそ<br>
+哀れ<ruby><rb>東</rb><rt>ひんがし</rt></ruby>に　オーロラかなし<br>
+<br>
+2 最<ruby><rb>涯</rb><rt>はて</rt></ruby>の番屋に　命の火チロチロ<br>
+トドの鳴く夜は　いとし娘が瞼に<br>
+<br>
+誰に語らん　この寂しさ<br>
+ランプの<ruby><rb>灯影</rb><rt>ほかげ</rt></ruby>に 海鳴りばかり<br>
+<br>
+3 スズランの緑が　雪解けに光れば<br>
+アイヌの唄声　<ruby><rb>谷</rb><rt>たに</rt></ruby>間にこだます<br>
+<br>
+シレトクの春は　潮路に開けて<br>
+舟人のかいな　海に輝く<br>
+<br>
+（升半音）<br>
+4 オレーオレーオーシコイ　沖の声舟唄<br>
+秋あじだいエリャンサ　<ruby><rb>揚</rb><rt>あ</rt></ruby>げる網ゃ大漁<br>
+<br>
+霞むクナシリ　<ruby><rb>我</rb><rt>わ</rt></ruby>が故郷<br>
+何日の日か<ruby><rb>詣</rb><rt>も</rt></ruby>でむ　御親の墓に<br>
+ねむれ静かに<br>
 </h1><br><h3><a href="#お">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="大きな古時計">【大きな古時計】</a>G1-A2<br>
@@ -266,6 +371,55 @@
 <br>
 心の<ruby><rb>支</rb><rt>ささ</rt></ruby>えは　いつの時代も<br>
 男は女　女は男<br>
+</h1><br><h3><a href="#お">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="男と女のラブゲーム">【男と女のラブゲーム】</a>E1-G2<br>
+<br>
+1 （女）飲みすぎたのは　あなたのせいよ<br>
+（男）弱い女のいとしさを<br>
+（女）飲みすぎたのは　あなたのせいよ<br>
+（男）可愛いおまえのつよがりを<br>
+<br>
+（女）お<ruby><rb>久</rb><rt>ひさ</rt></ruby>しぶりね　あなたが来るなんて<br>
+噂をしてたの　女の感ね<br>
+（男）仕事のせいさ　いつでも想うのは<br>
+お前のことだけさ<br>
+（女）嘘つきね<br>
+（男）困らせる<br>
+（女）意地<ruby><rb>悪</rb><rt>わる</rt></ruby>ね<br>
+（男）分かるだろう<br>
+（男女）すねて甘えて　<ruby><rb>我儘</rb><rt>わが</rt></ruby>を<br>
+<br>
+（女）飲みすぎたのは　あなたのせいよ<br>
+（男）弱い女のいとしさを<br>
+（女）抱きしめて<br>
+（男）抱きしめて　帰したくない<br>
+（男女）水割り　行きずり　古い傷<br>
+男と女のラブゲーム<br>
+<br>
+2 （女）知らない誰かと　浮気　なんかしちゃ<br>
+いやなの　いい女がここにいるわ<br>
+（男）綺麗なバラは　一輪あればいい<br>
+部屋に飾るのさ<br>
+（女）約束を<br>
+（男）耳もとで<br>
+（女）幸せを<br>
+（男）唇で<br>
+（男女）責めてひと夜の　<ruby><rb>薬</rb><rt>くすり</rt></ruby>指<br>
+<br>
+（女）飲みすぎたのは　あなたのせいよ<br>
+（男）可愛いおまえのつよがりを<br>
+（女）抱きしめて<br>
+（男）抱きしめて　帰したくない<br>
+（男女）水割り　行きずり　古い傷<br>
+男と女のラブゲーム<br>
+<br>
+3 （女）飲みすぎたのは　あなたのせいよ<br>
+（男）可愛いおまえのつよがりを<br>
+（女）抱きしめて<br>
+（男）抱きしめて　帰したくない<br>
+（男女）水割り　行きずり　古い傷<br>
+男と女のラブゲーム<br>
 </h1><br><h3><a href="#お">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="男の火祭り">【男の火祭り】</a>C1-G2<br>
