--- a/enkas/き.html
+++ b/enkas/き.html
@@ -14,6 +14,7 @@
 <a href="#京都慕情">京都慕情</a><br>
 <a href="#北国の春">北国の春</a><br>
 <a href="#君が好きだと叫びたい">君が好きだと叫びたい</a><br>
+<a href="#君をのせて">君をのせて</a><br>
 <a href="#帰省">帰省</a><br>
 <a href="#煌めく瞬間に捕われて">煌めく瞬間に捕われて</a><br>
 <a href="#銀の龍の背に乗って">銀の龍の背に乗って</a><br>
@@ -231,6 +232,33 @@ I wanna cry for you<br>
 君が好きだと　叫びたい　勇気で<ruby><rb>踏</rb><rt>ふ</rt></ruby>み<ruby><rb>出</rb><rt>だ</rt></ruby>そう<br>
 この熱い想いを　受け止めてほしい<br>
 I wanna cry for you<br>
+</h1><br><h3><a href="#き">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="君をのせて">【君をのせて】</a>E1-A2<br>
+<br>
+1 あの地平線　輝くのは<br>
+どこかに君を　隠しているから<br>
+沢山の灯が　懐かしいのは<br>
+あのどれか一つに　君がいるから<br>
+<br>
+さあ　出掛けよう　ひときれのパン<br>
+ナイフ　ランプ　かばんに<ruby><rb>詰</rb><rt>つ</rt></ruby>めこんで<br>
+<br>
+父さんが残した　熱い想い<br>
+母さんがくれた　あのまなざし<br>
+<br>
+地球は回る　君を隠して<br>
+輝く瞳　煌めく灯<br>
+地球は回る　君をのせて<br>
+いつかきっと出会う　ぼくらをのせて<br>
+<br>
+2 父さんが残した　熱い想い<br>
+母さんがくれた　あのまなざし<br>
+<br>
+地球は回る　君をかくして<br>
+輝く瞳　煌めく灯<br>
+地球は回るる　君をのせて<br>
+いつかきっと出会う　ぼくらをのせて<br>
 </h1><br><h3><a href="#き">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="帰省">【帰省】</a>G1-C3<br>
