--- a/enkas/さ.html
+++ b/enkas/さ.html
@@ -8,7 +8,10 @@
 <a href="..\indexenka.html" id="さ">Enka Category</a><br><br>
 <h2>
 さ<br><br>
+<a href="#3年目の浮気">3年目の浮気</a><br>
 <a href="#さあ歩きはじめよう">さあ歩きはじめよう</a><br>
+<a href="#さくら">さくら</a><br>
+<a href="#さくらさくら">さくらさくら</a><br>
 <a href="#さくらんぼ">さくらんぼ</a><br>
 <a href="#さそり座の女">さそり座の女</a><br>
 <a href="#桜">桜</a><br>
@@ -17,6 +20,59 @@
 <a href="#残酷な天使のテーゼ">残酷な天使のテーゼ</a><br>
 <a href="#里の秋">里の秋</a><br>
 </h2>
+<br><hr><br><h1>
+<a id="3年目の浮気">【3年目の浮気】</a>E1-F2<br>
+<br>
+[1] 馬鹿いってんじゃないよ　お前と　俺は<br>
+ケンカも　したけど<br>
+一つ屋根の下　暮らして　来たんだぜ<br>
+<br>
+馬鹿いってんじゃないよ　お前の事だけは<br>
+一日たりとも　忘れた事など　無かった俺だぜ<br>
+<br>
+良く言うわ　いつもだまして　ばかりで<br>
+私が何にも　知らない　とでも　思っているのね<br>
+<br>
+良く言うよ　惚れた　お前の負けだよ<br>
+もてない　男が　好きなら　俺も　考えなおすぜ<br>
+<br>
+馬鹿いってんじゃないわ　馬鹿いってんじゃないよ<br>
+遊ばれてるの　分からない　なんて　可愛そうだわ<br>
+<br>
+３年目の浮気ぐらい　大目に見ろよ<br>
+<ruby><rb>開</rb><rt>ひら</rt></ruby>き直る　その態度が　気にいらないのよ<br>
+<br>
+３年目の浮気ぐらい　大目に見ろよ<br>
+両手をついて　<ruby><rb>誤</rb><rt>あや</rt></ruby>まったって　許してあげない<br>
+<br>
+[2] 馬鹿やってんじゃないよ　本気で　そんな<br>
+荷物を　まとめて　涙も見せずに　旅だてるのかよ<br>
+<br>
+馬鹿やってんじゃないよ　男はそれなりに<br>
+浮気も　するけど　本気になれない　可愛いもんだぜ<br>
+<br>
+良く言うわ　そんな勝手なことばが<br>
+あなたの　口から　出てくる　なんて　心<ruby><rb>疑</rb><rt>うたが</rt></ruby>うわ<br>
+<br>
+良く言うよ　いつも甘えてばかりで<br>
+やきもち　やいても　可愛く<br>
+ないぜ　<ruby><rb>大人</rb><rt>おとな</rt></ruby>になりなよ<br>
+<br>
+馬鹿やってんじゃないわ　馬鹿やってんじゃないよ<br>
+私にだって　その気になれば　相手はいるのよ<br>
+<br>
+３年目の浮気ぐらい　大目に見ろよ<br>
+<ruby><rb>開</rb><rt>ひら</rt></ruby>き直る　その態度が　気にいらないのよ<br>
+<br>
+３年目の浮気ぐらい　大目に見てよ<br>
+両手をついて　<ruby><rb>誤</rb><rt>あや</rt></ruby>まったって　許してあげない<br>
+<br>
+[3] ３年目の浮気ぐらい　大目に見ろよ<br>
+<ruby><rb>開</rb><rt>ひら</rt></ruby>き直る　その態度が　気にいらないのよ<br>
+<br>
+３年目の浮気ぐらい　大目に見てよ<br>
+両手をついて　<ruby><rb>誤</rb><rt>あや</rt></ruby>まったって　許してあげない<br>
+</h1><br><h3><a href="#さ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="さあ歩きはじめよう">【さあ歩きはじめよう】</a>D1-D2<br>
 <br>
@@ -37,6 +93,58 @@
 僕のそばにカピがいる<br>
 だから　また今日も<br>
 さあ歩き始めよう<br>
+</h1><br><h3><a href="#さ">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="さくら">【さくら】</a>A1-E3<br>
+<br>
+1 僕らは　きっと待ってる<br>
+君とまた会える　日々を<br>
+さくら<ruby><rb>並</rb><rt>なみ</rt></ruby>木の道の上で　手を振り叫ぶよ<br>
+<br>
+どんなに　苦しい時も　君は笑って　いるから<br>
+<ruby><rb>挫</rb><rt>くじ</rt></ruby>けそうに　なりかけても　頑張れる気が　したよ<br>
+<br>
+霞みゆく　景色の中に　あの日の唄が　聴こえる<br>
+<br>
+さくら　さくら　今、咲き誇る<br>
+<ruby><rb>刹</rb><rt>せつ</rt></ruby>那に散りゆく運命と知って<br>
+さらば　友よ　旅立ちの<ruby><rb>刻</rb><rt>とき</rt></ruby><br>
+変わらないその想いを　今<br>
+<br>
+2 今なら　言えるだろうか　<ruby><rb>偽</rb><rt>いつわ</rt></ruby>りのない言葉<br>
+輝ける君の未来を　願う　本当の言葉<br>
+<br>
+移りゆく　街はまるで　僕らを　<ruby><rb>急</rb><rt>せ</rt></ruby>かす様に<br>
+<br>
+さくら　さくら　ただ舞い落ちる<br>
+いつか生まれ変わる　<ruby><rb>瞬間</rb><rt>とき</rt></ruby>を信じ<br>
+泣くな　友よ今　<ruby><rb>惜別</rb><rt>せきべつ</rt></ruby>の時<br>
+飾らないあの笑顔で　さあ<br>
+<br>
+3 さくら　さくら　いざ舞い上がれ<br>
+永遠にさんざめく光を浴びて<br>
+さらば　友よまた　この場所で会おう<br>
+さくら舞い散る道の<br>
+さくら舞い散る道の　上で <br>
+</h1><br><h3><a href="#さ">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="さくらさくら">【さくらさくら】</a>B1-C3<br>
+<br>
+1 さくら　さくら<br>
+野山も　里も<br>
+見わたす　限り<br>
+霞か　雲か<br>
+朝日に　匂う<br>
+さくら　さくら<br>
+花盛り<br>
+<br>
+2 さくら　さくら<br>
+弥生の　空は<br>
+見渡す　限り<br>
+霞か　雲か<br>
+匂いぞ　出ずる<br>
+いざや　いざや<br>
+見にゆかん<br>
 </h1><br><h3><a href="#さ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="さくらんぼ">【さくらんぼ】</a>D1-G2<br>
