--- a/enkas/し.html
+++ b/enkas/し.html
@@ -9,10 +9,12 @@
 <h2>
 し<br><br>
 <a href="#Secret of my heart">Secret of my heart</a><br>
+<a href="#シンデレラ・ハネムーン">シンデレラ・ハネムーン</a><br>
 <a href="#上海ラブソング">上海ラブソング</a><br>
-<a href="#上海慕情 ">上海慕情 </a><br>
+<a href="#上海慕情">上海慕情</a><br>
 <a href="#人生いろいろ">人生いろいろ</a><br>
 <a href="#四季の歌">四季の歌</a><br>
+<a href="#島のブルース">島のブルース</a><br>
 <a href="#島唄">島唄</a><br>
 <a href="#島田のブンブン">島田のブンブン</a><br>
 <a href="#幸せ">幸せ</a><br>
@@ -79,7 +81,44 @@ Can't you see, you're my heart<br>
 だけどまだ　いつまでも変わらない<br>
 Secret of my heart<br>
 Our future is forever<br>
-Secret of my heart...<br>
+Secret of my heart…<br>
+</h1><br><h3><a href="#し">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="シンデレラ・ハネムーン">【シンデレラ・ハネムーン】</a>D1-G2<br>
+<br>
+1 いつでも　二人は　シンデレラ・ハネムーン<br>
+時計に　追われる　シンデレラ・ハネムーン<br>
+<br>
+<ruby><rb>好</rb><rt>この</rt></ruby>みの　煙草　あと一本になり<br>
+あなたはやるせない目をして見てる<br>
+肩でもいいわ　しっかり抱いてよ<br>
+<br>
+ルージュも　いつか<ruby><rb>乾</rb><rt>かわ</rt></ruby>いた色になり<br>
+言葉は　一つおやすみ残すだけ<br>
+<br>
+2 日ぐれに　始まる　シンデレラ・ハネムーン<br>
+夜更けに　別れる　シンデレラ・ハネムーン<br>
+<br>
+このまま　朝が　<ruby><rb>訪</rb><rt>おとず</rt></ruby>れそうだけど<br>
+<ruby><rb>重</rb><rt>かさ</rt></ruby>ねたくちびるがつめたくなって<br>
+せつなさなんか　教えてくれるの<br>
+<br>
+シャッター　おろすばかりの店先で<br>
+花など　買ってふざけたふりをする<br>
+<br>
+3 いつまで続くの　シンデレラ・ハネムーン<br>
+あなたと私は　シンデレラ・ハネムーン<br>
+<br>
+シャンプーした　髪を夜風にさらし<br>
+あなたの口ぐせを思い出してる<br>
+幸せだから　いいじゃないかなの<br>
+<br>
+私は　一人爪など切りながら<br>
+なぜだか　<ruby><rb>重</rb><rt>おも</rt></ruby>いためいきついている<br>
+<br>
+ルルル……<br>
+私は　ひとり爪など切りながら<br>
+なぜだか　重いためいきついている<br>
 </h1><br><h3><a href="#し">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="上海ラブソング">【上海ラブソング】</a>C1-E2<br>
@@ -123,7 +162,7 @@ Secret of my heart...<br>
 今日もうたってる　わたしと一緒に歌って！<br>
 </h1><br><h3><a href="#し">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="上海慕情 ">【上海慕情 】</a><br>
+<a id="上海慕情">【上海慕情】</a><br>
 <br>
 1 ああ　恋が灯る街よ<br>
 ねぇ　これが最後の旅さ<br>
@@ -212,6 +251,25 @@ Secret of my heart...<br>
 <br>
 ４ 冬を愛する人は　心広き人<br>
 根雪をとかす大地のような　僕の母親<br>
+</h1><br><h3><a href="#し">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="島のブルース">【島のブルース】</a>G1-C3<br>
+<br>
+1 <ruby><rb>奄美</rb><rt>あまみ</rt></ruby>なちかしや　<ruby><rb>蘇鉄</rb><rt>ソテツ</rt></ruby>のかげで<br>
+泣けばゆれます　サネン<ruby><rb>花</rb><rt>ばな</rt></ruby>ョ<br>
+長い黒髪　島娘　島娘ョ<br>
+<br>
+2 <ruby><rb>愛人</rb><rt>カナ</rt></ruby>は今頃　起きてか寝てか<br>
+淋しがらせる　浜千鳥ョ<br>
+<ruby><rb>南風</rb><rt>ハエ</rt></ruby>の吹く夜は　眠られぬ　眠られぬョ<br>
+<br>
+3 夏の踊りは　<ruby><rb>七日</rb><rt>なのか</rt></ruby>と<ruby><rb>七夜</rb><rt>ななよ</rt></ruby><br>
+みんな知り<ruby><rb>候</rb><rt>ショ</rt></ruby>る　月の夜ョ<br>
+名瀬の港の　船がでる　船がでるョ<br>
+<br>
+4 着せてみせたい　大島つむぎ<br>
+忘れられない　あの人にョ<br>
+情け<ruby><rb>一</rb><rt>ひと</rt></ruby>筋　島娘　島娘ョ<br>
 </h1><br><h3><a href="#し">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="島唄">【島唄】</a>G1-D3<br>
