--- a/enkas/す.html
+++ b/enkas/す.html
@@ -11,6 +11,8 @@
 <a href="#好きで、好きで、好きで。">好きで、好きで、好きで。</a><br>
 <a href="#好きな人">好きな人</a><br>
 <a href="#好きになった人">好きになった人</a><br>
+<a href="#姿三四郎 ">姿三四郎 </a><br>
+<a href="#姿三四郎">姿三四郎</a><br>
 <a href="#捨てられて">捨てられて</a><br>
 <a href="#昴">昴</a><br>
 </h2>
@@ -28,7 +30,7 @@
 <ruby><rb>右</rb><rt>みぎ</rt></ruby>へ<ruby><rb>左</rb><rt>ひだり</rt></ruby>へ　心がざわめく<br>
 <br>
 背中を向けた　あなたにならば<br>
-素直な気持ちを言えるのになぁ...<br>
+素直な気持ちを言えるのになぁ…<br>
 どうして?　本当はこんなに<br>
 <br>
 好きで　好きで　好きで<br>
@@ -50,12 +52,12 @@
 好きで　好きで　好きで<br>
 仕方ない気持ちを伝えて<br>
 <br>
-3 こんなに...　好きで　好きで　好きで<br>
+3 こんなに…　好きで　好きで　好きで<br>
 あなたの愛だけに包まれたくて<br>
 好きで　好きで　好きだから<br>
 涙が溢れこぼれてしまう<br>
 <br>
-でも...好きで　好きで　好きだから<br>
+でも…　好きで　好きで　好きだから<br>
 仕方のない恋で　終わりたくない<br>
 好きで　好きで　好きで<br>
 あなた以外何もいらない<br>
@@ -129,6 +131,48 @@
 倖せもって　帰ってね<br>
 早く　早く　早く帰って　笑ってみせて<br>
 さよなら　さよなら　好きになった人<br>
+</h1><br><h3><a href="#す">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="姿三四郎 ">【姿三四郎 】</a>A1-E3<br>
+<br>
+1 やれば出来るさ　出来なけりゃ<br>
+男はもう一度　やり直す<br>
+<ruby><rb>口惜</rb><rt>くや</rt></ruby>しかったら　泣け…泣け…<br>
+泣いてもいいから　前を見ろ　三四郎…<br>
+それが<ruby><rb>勝負</rb><rt>しょうぶ</rt></ruby>と　言うものさ<br>
+<br>
+2 石じゃないもの　咲く花に<br>
+心を燃やして　何故悪い<br>
+辛いだろうが　待て…待て…<br>
+二道かけない　黒い<ruby><rb>帯</rb><rt>おび</rt></ruby>　三四郎…<br>
+それが<ruby><rb>修業</rb><rt>しゅぎょう</rt></ruby>と　言うことさ<br>
+<br>
+3 歩き出したら　<ruby><rb>退</rb><rt>ひ</rt></ruby>くものか<br>
+男が心に　決めた道<br>
+決めた以上は　行け…行け…<br>
+夜明けの<ruby><rb>光</rb><rt>あかり</rt></ruby>が　見えるまで　三四郎…<br>
+それが生きると　言うことさ<br>
+</h1><br><h3><a href="#す">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="姿三四郎">【姿三四郎】</a>A1-E3<br>
+<br>
+1 やれば出来るさ 出来なけりゃ<br>
+男はもう一度 やり直す<br>
+口惜しかったら 泣け…泣け…<br>
+泣いてもいいから 前を見ろ 三四郎…<br>
+それが勝負と言うものさ<br>
+<br>
+2 石じゃないもの 咲く花に<br>
+こころを燃やして なぜ悪い<br>
+つらいだろうが 待て…待て…<br>
+二道かけない 黒い帯 三四郎…<br>
+それが修業と言うことさ<br>
+<br>
+3 歩き出したら 退くものか<br>
+男がこころに 決めた道<br>
+決めた以上は 行け…行け…<br>
+夜明けの光が 見えるまで 三四郎…<br>
+それが生きると 言うことさ<br>
 </h1><br><h3><a href="#す">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="捨てられて">【捨てられて】</a>D1-F2<br>
