--- a/enkas/た.html
+++ b/enkas/た.html
@@ -8,10 +8,85 @@
 <a href="..\indexenka.html" id="た">Enka Category</a><br><br>
 <h2>
 た<br><br>
+<a href="#Time After Time ～花舞う街で～">Time After Time ～花舞う街で～</a><br>
+<a href="#大連の街から">大連の街から</a><br>
 <a href="#竹の歌">竹の歌</a><br>
 <a href="#竹田の子守唄">竹田の子守唄</a><br>
 <a href="#達者でナ">達者でナ</a><br>
 </h2>
+<br><hr><br><h1>
+<a id="Time After Time ～花舞う街で～">【Time After Time ～花舞う街で～】</a>G1-E3-升5半音（F作C）-升3半音<br>
+<br>
+1 もしも　君に巡り逢えたら<br>
+二度と　君の手を離さない<br>
+春の　終わり告げる　花<ruby><rb>御堂</rb><rt>みどう</rt></ruby><br>
+霞む　花<ruby><rb>一枚</rb><rt>ひとひら</rt></ruby><br>
+<br>
+<ruby><rb>蘇</rb><rt>よみがえ</rt></ruby>る　思い出の歌<br>
+この胸に　今も優しく<br>
+<br>
+Time after time　君と出逢った奇跡<br>
+<ruby><rb>緩</rb><rt>ゆる</rt></ruby>やかな風吹く街で<br>
+そっと手を<ruby><rb>繋</rb><rt>つな</rt></ruby>ぎ　歩いた坂道<br>
+今も忘れない約束<br>
+<br>
+2 風に　君の声が聞こえる<br>
+<ruby><rb>薄氷</rb><rt>うすらい</rt></ruby><ruby><rb>冴</rb><rt>さ</rt></ruby>え返る　遠い記憶<br>
+傷付く　怖さを知らず　誓った<br>
+いつかまた　この場所で<br>
+<br>
+巡り逢おう　薄紅色の<br>
+季節が来る日に　笑顔で<br>
+<br>
+Time after time　一人　花舞う街で<br>
+散らざるときは戻らないけれど<br>
+あの日と同じ　変わらない景色に<br>
+涙ひらり　待っていたよ<br>
+<br>
+（升5半音，F作C）<br>
+3 風舞う花びらが　<ruby><rb>水面</rb><rt>みなも</rt></ruby>を<ruby><rb>撫</rb><rt>な</rt></ruby>でるように<br>
+（上述调升3半音）<br>
+大切に想うほど　切なく…<br>
+<br>
+（回原调）<br>
+4 人は　皆孤独と言うけれど<br>
+探さずにはいられない　誰かを<br>
+<ruby><rb>儚</rb><rt>はかな</rt></ruby>く　壊れやすいものばかり<br>
+追い求めてしまう<br>
+<br>
+Time after time　君と色づく街で<br>
+出逢えたら　もう約束はいらない<br>
+誰よりもずっと　傷付きやすい君の<br>
+そばにいたい今度は　きっと<br>
+</h1><br><h3><a href="#た">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="大連の街から">【大連の街から】</a>E1-C3<br>
+<br>
+1 ここが大連の街　とても綺麗だね<br>
+駅前広場さえ　心時めく<br>
+アカシアの道を歩けば<br>
+何故かしら　時が止まるよ<br>
+君のこと　思うたび<br>
+この胸が　ただ痛むよ<br>
+一人旅　別れ旅<br>
+諦めの旅なのに　君が恋しい<br>
+<br>
+2 有<ruby><rb>軌</rb><rt>き</rt></ruby>電車に乗って　街を<ruby><rb>一</rb><rt>ひと</rt></ruby>回り<br>
+若者たちはみな　とてもおしゃれさ<br>
+星海の　白い<ruby><rb>渚</rb><rt>なぎさ</rt></ruby>よ<br>
+老虎灘　海の青さよ<br>
+君は今　何処にいて<br>
+何をして過ごすのだろう<br>
+港まで　行くバスが<br>
+黄昏に消えて行く　星も泣いてる<br>
+<br>
+この海の遥か彼方に<br>
+君がいる　君が待ってる<br>
+たまらなく　会いたいよ<br>
+もう一度　抱きしめたい<br>
+さよならは　<ruby><rb>過</rb><rt>あやま</rt></ruby>ちさ<br>
+何もかも投げすてて　とんで<ruby><rb>行</rb><rt>ゆ</rt></ruby>きたい<br>
+</h1><br><h3><a href="#た">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="竹の歌">【竹の歌】</a>E1-A2<br>
 <br>
