--- a/enkas/て.html
+++ b/enkas/て.html
@@ -50,7 +50,7 @@
 (升/降7半音，G作C）<br>
 3 人生の　<ruby><rb>全</rb><rt>すべ</rt></ruby>てに意味があるから<br>
 <ruby><rb>恐</rb><rt>おそ</rt></ruby>れずに　あなたの夢を育てて<br>
-La... Keep on believing...<br>
+La… Keep on believing…<br>
 <br>
 (回原调）<br>
 負けそうで　 泣きそうで<br>
