--- a/enkas/と.html
+++ b/enkas/と.html
@@ -77,7 +77,7 @@
 その横顔が　何故かいとしい<br>
 <br>
 誰も知らない　二人の時間<br>
-世界の<ruby><rb>薔薇</rb><rt>はな</rt></ruby>が　ひらくとき...<br>
+世界の<ruby><rb>薔薇</rb><rt>はな</rt></ruby>が　ひらくとき…<br>
 <br>
 愛してルンバ　恋してルンバ<br>
 ときめきのルンバ<br>
@@ -88,7 +88,7 @@
 二人のために　甘いメロディ<br>
 <br>
 百の言葉を　<ruby><rb>囁</rb><rt>ささや</rt></ruby>くよりも<br>
-心をこめて　見つめたい......<br>
+心をこめて　見つめたい……<br>
 <br>
 愛してルンバ　恋してルンバ<br>
 ときめきのルンバ<br>
@@ -99,7 +99,7 @@
 離しはしない　ずっと一緒さ<br>
 <br>
 永遠に流れる　二人の時間<br>
-夢ならどうか　<ruby><rb>覚</rb><rt>さ</rt></ruby>めないで......<br>
+夢ならどうか　<ruby><rb>覚</rb><rt>さ</rt></ruby>めないで……<br>
 <br>
 愛してルンバ　恋してルンバ<br>
 ときめきのルンバ<br>
