--- a/enkas/な.html
+++ b/enkas/な.html
@@ -8,6 +8,7 @@
 <a href="..\indexenka.html" id="な">Enka Category</a><br><br>
 <h2>
 な<br><br>
+<a href="#何でもないわ">何でもないわ</a><br>
 <a href="#夏の終わり">夏の終わり</a><br>
 <a href="#夏をあきらめて">夏をあきらめて</a><br>
 <a href="#夏祭り">夏祭り</a><br>
@@ -19,6 +20,61 @@
 <a href="#謎">謎</a><br>
 <a href="#長い間">長い間</a><br>
 </h2>
+<br><hr><br><h1>
+<a id="何でもないわ">【何でもないわ】</a>G1-A2<br>
+<br>
+1 私が<ruby><rb>黙</rb><rt>だま</rt></ruby>って　<ruby><rb>うつむ</rb><rt>うつむ</rt></ruby>くと<br>
+どうかしたのと　聞くあなた<br>
+その胸に甘えたい<br>
+そう、何んでもないわ<br>
+<br>
+話す言葉が　邪魔になる<br>
+ジーンとする時もあるのよ<br>
+爱しているからなの<br>
+アラ、何んでもないわ<br>
+<br>
+好き好き好きというより<br>
+確かな感じに<br>
+黙っているほうが<br>
+分かるでしょう　分かるでしょう<br>
+そう、何んでもないわ<br>
+ウーム　何んでもないわ<br>
+<br>
+2 ちょっぴり髪の<ruby><rb>毛</rb><rt>げ</rt></ruby>　乱れてる<br>
+直してあげた　だけなのよ<br>
+気にしなくても　いいの<br>
+そう　何んでもないわ<br>
+<br>
+あなたの事なら　何もかも<br>
+知って起きたい　<ruby><rb>覚</rb><rt>おぼ</rt></ruby>えたい<br>
+いつもするくせまでも<br>
+アラ、何んでもないわ<br>
+<br>
+大きな子供みたい　男の人って<br>
+そんなとこがとっても好きよ<br>
+分かるでしょう　分かるでしょう<br>
+そう、何んでもないわ<br>
+ウーム　何でもないわ<br>
+<br>
+（升半音）<br>
+3 おこっちゃいやなの　女には<br>
+愛し過ぎると　<ruby><rb>反対</rb><rt>はんたい</rt></ruby>に<br>
+憎いことがあるのよ<br>
+そう、何んでもないわ<br>
+<br>
+思い過ごしのせいなのね<br>
+昨日　あなたは何してた<br>
+責める<ruby><rb>積</rb><rt>つも</rt></ruby>りじゃないわ<br>
+アラ、何んでもないわ<br>
+<br>
+あなたの云う通り<br>
+信じていましょうね<br>
+やくなんて　ばかみたい<br>
+ごめんなさい　ごめんなさい<br>
+そう、何んでもないわ<br>
+ウーム　何んでもないわ<br>
+ウーム　何んでもないわ<br>
+</h1><br><h3><a href="#な">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="夏の終わり">【夏の終わり】</a>G1-G3<br>
 <br>
