--- a/enkas/は.html
+++ b/enkas/は.html
@@ -14,10 +14,13 @@
 <a href="#バラ色の人生">バラ色の人生</a><br>
 <a href="#埴生の宿">埴生の宿</a><br>
 <a href="#春が来た">春が来た</a><br>
+<a href="#春夏秋冬自惚れちゃって">春夏秋冬自惚れちゃって</a><br>
 <a href="#浜辺の歌">浜辺の歌</a><br>
 <a href="#箱根八里の半次郎">箱根八里の半次郎</a><br>
 <a href="#花">花</a><br>
 <a href="#花の子ルンルン">花の子ルンルン</a><br>
+<a href="#花はどこへ行った">花はどこへ行った</a><br>
+<a href="#花は咲く">花は咲く</a><br>
 <a href="#花咲く旅路">花咲く旅路</a><br>
 <a href="#花～すべての人の心に花を～">花～すべての人の心に花を～</a><br>
 </h2>
@@ -209,6 +212,53 @@
 山で鳴く 里で鳴く　野でも鳴く<br>
 </h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
+<a id="春夏秋冬自惚れちゃって">【春夏秋冬自惚れちゃって】</a>G1-D3<br>
+<br>
+1 夜桜や…　あなた散らそか　散らそかあなた<br>
+<ruby><rb>覗</rb><rt>のぞ</rt></ruby>いちゃ　いやだよ　窓の月…なんてね<br>
+<br>
+私が男なら　私に惚れる<br>
+こんなに色っぽい　女はいない<br>
+<br>
+<ruby><rb>自惚</rb><rt>うぬぼ</rt></ruby>れちゃって　ちゃって　自惚れちゃって<br>
+春だというのに<br>
+あゝ誰かさん　誰かさん　うふ～ん<br>
+ <br>
+2 朝顔や…　ゆべ濡れたか　濡れたかゆべ<br>
+笑っちゃ　いやだよ　<ruby><rb>蝉</rb><rt>せみ</rt></ruby>時雨…なんてね<br>
+<br>
+私が男なら　私に惚れる<br>
+こんな<ruby><rb>艶</rb><rt>つや</rt></ruby>っぽい　女はいない<br>
+<br>
+自惚れちゃって　ちゃって　自惚れちゃって<br>
+夏だというのに<br>
+あゝ誰かさん　誰かさん　うふ～ん<br>
+<br>
+<br>
+3 秋桜や…　日暮れ待つ人　待つ人日暮れ<br>
+<ruby><rb>逃</rb><rt>に</rt></ruby>げちゃ　いやだよ　赤トンボ…なんてね<br>
+<br>
+私が男なら　私に惚れる<br>
+こんなに<ruby><rb>粋</rb><rt>いき</rt></ruby>っぽい　女はいない<br>
+<br>
+自惚れちゃって　ちゃって　自惚れちゃって<br>
+秋だというのに<br>
+あゝ誰かさん　誰かさん　うふ～ん<br>
+<br>
+4 <ruby><rb>山茶花</rb><rt>さざんか</rt></ruby>や…　紅く染めてよ　染めてよ紅く<br>
+<ruby><rb>焦</rb><rt>じ</rt></ruby>らしちゃ　いやだよ　雪の肌…なんてね<br>
+<br>
+私が男なら　私に惚れる<br>
+こんなに可愛いぽい　女はいない<br>
+<br>
+自惚れちゃって　ちゃって　自惚れちゃって<br>
+冬だというのに<br>
+あゝ誰かさん　誰かさん　うふ～ん<br>
+<br>
+5 春夏秋冬　春夏秋冬　春夏秋冬　春夏秋冬<br>
+さよなら<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
+<br><hr><br><h1>
 <a id="浜辺の歌">【浜辺の歌】</a>G1-A2<br>
 <br>
 1 あした浜辺を　さまよえば<br>
@@ -322,6 +372,70 @@
 もうすぐあなたと　ともだちに<br>
 なれると思います<br>
 ルルルンルンルン……<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="花はどこへ行った">【花はどこへ行った】</a>B1-D3<br>
+<br>
+1 野に咲く花は　どこへゆく<br>
+野に咲く花は　清らか<br>
+野に咲く花は　<ruby><rb>少女</rb><rt>しょうじょ</rt></ruby>の胸に<br>
+そっと優しく　<ruby><rb>抱</rb><rt>いだ</rt></ruby>かれる<br>
+<br>
+2 可愛い少女は　どこへゆく<br>
+可愛い少女は　微笑む<br>
+可愛い少女は　若者の胸に<br>
+恋の心　<ruby><rb>預</rb><rt>あず</rt></ruby>けるのさ<br>
+<br>
+3 その若者は　どこへゆく<br>
+その若者は　勇んで<br>
+その若者は　<ruby><rb>戦</rb><rt>たたか</rt></ruby>いにゆく<br>
+<ruby><rb>力</rb><rt>ちから</rt></ruby>づよく　別れをつげる<br>
+<br>
+4 戦い終り　どこへゆく<br>
+戦い終り　静かに<br>
+戦い終り　土に眠る<br>
+安らかなる　眠りにつく<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="花は咲く">【花は咲く】</a>E1-D3<br>
+<br>
+1 真っ白な雪道に　春風香る<br>
+私は懐かしい　あの街を思い出す<br>
+<br>
+叶えたい夢もあった　変わりたい自分もいた<br>
+今はただ懐かしい　あの人を思い出す<br>
+<br>
+誰かの歌が聞こえる　誰かを励ましてる<br>
+誰かの笑顔が見える　悲しみの向こう側に<br>
+<br>
+花は　花は　花は咲く<br>
+いつか生まれる君に<br>
+花は　花は　花は咲く<br>
+私は何を残しただろう<br>
+<br>
+2 夜空の向こうの　朝の<ruby><rb>気</rb><rt>け</rt></ruby>配に<br>
+私は懐かしい　あの日々を思い出す<br>
+<br>
+傷ついて傷つけて　報われず泣いたりして<br>
+今はただ愛おしい　あの人を思い出す<br>
+<br>
+誰かの想いが見える　誰かと結ばれてる<br>
+誰かの未来が見える　悲しみの向こう側に<br>
+<br>
+花は　花は　花は咲く<br>
+いつか生まれる君に<br>
+花は　花は　花は咲く<br>
+私は何を残しただろう<br>
+<br>
+3 花は　花は　花は咲く<br>
+いつか生まれる君に<br>
+花は　花は　花は咲く<br>
+私は何を残しただろう<br>
+<br>
+花は　花は　花は咲く<br>
+いつか生まれる君に<br>
+花は　花は　花は咲く<br>
+いつか恋する君のために<br>
 </h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="花咲く旅路">【花咲く旅路】</a>C1-E2<br>
