--- a/enkas/ふ.html
+++ b/enkas/ふ.html
@@ -112,7 +112,7 @@
 願いを　流れ星に<br>
 そっと唱えてみたけれど<br>
 泣きたいよ　届かない想いを<br>
-この空に...。<br>
+この空に…。<br>
 </h1><br><h3><a href="#ふ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="故郷">【故郷】</a>G1-A2<br>
