--- a/enkas/も.html
+++ b/enkas/も.html
@@ -8,10 +8,109 @@
 <a href="..\indexenka.html" id="も">Enka Category</a><br><br>
 <h2>
 も<br><br>
+<a href="#もしかして PARTII">もしかして PARTII</a><br>
+<a href="#もしかして">もしかして</a><br>
 <a href="#森のくまさん">森のくまさん</a><br>
 <a href="#森の水車">森の水車</a><br>
 <a href="#紅葉">紅葉</a><br>
 </h2>
+<br><hr><br><h1>
+<a id="もしかして PARTII">【もしかして PARTII】</a>E1-A2<br>
+<br>
+1 （女）もしかして もしかして<br>
+私の<ruby><rb>他</rb><rt>ほか</rt></ruby>にも誰か<br>
+いい人が　いるのなら<br>
+帰っていいのよかまわずに<br>
+<br>
+（男）もしかして　もしかして<br>
+お前のすねてる<ruby><rb>訳</rb><rt>わけ</rt></ruby>が<br>
+さっきの電話のせいならば<br>
+バカだな仕事の相手だよ<br>
+<br>
+（女）ねえ貴方　好きだからこそなおさら<br>
+私いじわるをしてしまう<br>
+（男）子供みたいに　わがままいえる<br>
+お前がとても可愛い<br>
+<br>
+（男）店を出て<br>
+（女）ねえ歩きましょう<br>
+（合）二人の行く先はひとつ<br>
+<br>
+2（女）なにげなく　なにげなく<br>
+さそわれてしまうなんて<br>
+お酒に酔った　せいかしら<br>
+それとも貴方がなれてるの<br>
+<br>
+（男）こんなにも　こんなにも<br>
+ひかれた　<ruby><rb>女</rb><rt>ひと</rt></ruby>はいない<br>
+遊ぶで別れるつもりなら<br>
+連れてはこないさ　この部屋に<br>
+<br>
+（女）ねえ貴方　素直に信じていいのね<br>
+私泣き虫になりそうよ<br>
+（男）いつもみたいに　笑ってごらん<br>
+お前の笑顔が好きだよ<br>
+<br>
+（男）外は雨<br>
+（女）もう帰れない<br>
+（合）ふたりは今夜からひとつ<br>
+<br>
+3 （女）ねえ貴方　瞳の綺麗き男に<br>
+私ふられたことがあるの<br>
+（男）そんな小さな　昔の傷は<br>
+綺麗に忘れてしまえよ<br>
+<br>
+（男）外は雨<br>
+（女）もう帰らない<br>
+（合）二人は今夜からひとつ<br>
+</h1><br><h3><a href="#も">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="もしかして">【もしかして】</a>E1-A2<br>
+<br>
+1 もしかして…　もしかして<br>
+笑わないで　くれるなら<br>
+この気持ち　打ち明ける<br>
+お酒の<ruby><rb>力</rb><rt>ちから</rt></ruby>を　かりてでも<br>
+<br>
+もしかして…　もしかして<br>
+貴方に　ふられた時は<br>
+お酒の席の　ことだから<br>
+笑ってごまかせるわ　私<br>
+<br>
+ねえ貴方　これから何処へ行くの<br>
+<ruby><rb>别</rb><rt>べつ</rt></ruby>にひきとめは　しないけど<br>
+よろしかったら　朝までずっと<br>
+私を　そばに置いてね<br>
+<br>
+今夜だけ　ねえ　今夜だけ<br>
+私のわがままを　聞いて<br>
+<br>
+2 なにげなく…　なにげなく<br>
+時計を見る　横顔も<br>
+烟草をふかす　仕草にも<br>
+感じてしまうの　<ruby><rb>変</rb><rt>へん</rt></ruby>かしら<br>
+<br>
+こんなにも…　こんなにも<br>
+お酒が　おいしい<ruby><rb>理由</rb><rt>わけ</rt></ruby>は<br>
+私が<ruby><rb>選</rb><rt>えら</rt></ruby>んだ　ネクタイを<br>
+<ruby><rb>結</rb><rt>むす</rt></ruby>んできてくれたからなの<br>
+<br>
+ねえ貴方　<ruby><rb>占</rb><rt>うらな</rt></ruby>いは信じる人<br>
+私　占ってもらったの<br>
+つくす女と　強い男で<br>
+幸福　つかめるそうよ<br>
+<br>
+今夜こそ　ねえ　今夜こそ<br>
+私のわがままを　聞いて<br>
+<br>
+3 ねえ貴方　噂を気にしているのね<br>
+なんでも　なかった　あの人とは<br>
+<br>
+死ぬほど好きに　なった女の<br>
+言葉を　信じてほしいわ<br>
+今夜こそ　ねえ　今夜こそ<br>
+私のわがままを　聞いて<br>
+</h1><br><h3><a href="#も">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="森のくまさん">【森のくまさん】</a>C1-C2<br>
 <br>
