--- a/enkas/よ.html
+++ b/enkas/よ.html
@@ -10,6 +10,7 @@
 よ<br><br>
 <a href="#夜桜お七">夜桜お七</a><br>
 <a href="#夜空ノムコウ">夜空ノムコウ</a><br>
+<a href="#横顔">横顔</a><br>
 </h2>
 <br><hr><br><h1>
 <a id="夜桜お七">【夜桜お七】</a>E1-G2<br>
@@ -75,6 +76,43 @@
 <ruby><rb>全</rb><rt>すべ</rt></ruby>てが思うほど　うまくはいかないみたいだ<br>
 あれから　ぼくたちは　何かを信じてこれたかなぁ<br>
 夜空の向こうには　明日がもう待っている<br>
+</h1><br><h3><a href="#よ">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="横顔">【横顔】</a>E1-A2<br>
+<br>
+1 最後の夜にしようと　心にきめて　部屋を出たのに<br>
+見<ruby><rb>慣</rb><rt>な</rt></ruby>れたその微笑み　言葉を閉じこめる<br>
+<br>
+同じ色の　気持ちなら　愛と呼ばせて<br>
+ほかの誰も知らない　<ruby><rb>絆</rb><rt>きずな</rt></ruby>でいいわ<br>
+<br>
+想いが　想いが　溢れて　あなたと<br>
+真っすぐに　向きあえない<br>
+静かに　横顔　見ているだけでいい<br>
+いつの日か　<ruby><rb>必</rb><rt>かなら</rt></ruby>ず<br>
+悲しみも思い出に　きっと変わるから<br>
+<br>
+2 最後の恋にしたいの　素直な気持ち　見せた私に<br>
+かざらない優しさで　こたえてくれたひと<br>
+<br>
+心だけは　つながっていると信じて<br>
+引き戻せない道を　歩いてきた<br>
+<br>
+想いが　想いが　流れる時間を<br>
+さまよっても　つらくはない<br>
+遠くで　横顔　見守るよろこび<br>
+それだけで　幸せ<br>
+あなたのいる星なら　生きていけるから<br>
+<br>
+3 すぎた過去へと　つづく<ruby><rb>扉</rb><rt>とびら</rt></ruby>は<br>
+鍵ごと消えてしまったけど<br>
+<ruby><rb>明日</rb><rt>あす</rt></ruby>への扉　鍵<ruby><rb>穴</rb><rt>あな</rt></ruby>さえもなくて<br>
+<br>
+想いが　想いが　溢れて　あなたと<br>
+真っすぐに　向きあえない<br>
+静かに　横顔　見ているだけでいい<br>
+いつの日か　<ruby><rb>必</rb><rt>かなら</rt></ruby>ず<br>
+悲しみも思い出に　きっと変わるから<br>
 </h1><br><h3><a href="#よ">Back to Top</a></h3>
 <a href="..\indexenka.html">Enka Category</a></body>
 </html>
