--- a/indexenka.html
+++ b/indexenka.html
@@ -29,7 +29,7 @@
 		<a href="enkas/に.html">に</a> 
 		ぬ 
 		ね 
-		の<br>
+		<a href="enkas/の.html">の</a><br>
 		<a href="enkas/は.html">は</a> 
 		<a href="enkas/ひ.html">ひ</a> 
 		<a href="enkas/ふ.html">ふ</a> 
