--- a/enkas/あ.html
+++ b/enkas/あ.html
@@ -13,6 +13,7 @@
 <a href="#あなたがいるから">あなたがいるから</a><br>
 <a href="#あばれ太鼓">あばれ太鼓</a><br>
 <a href="#ありがとう あなた">ありがとう あなた</a><br>
+<a href="#アカシアの大連">アカシアの大連</a><br>
 <a href="#亜麻色の髪の乙女">亜麻色の髪の乙女</a><br>
 <a href="#天城越え">天城越え</a><br>
 <a href="#安里屋ユンタ">安里屋ユンタ</a><br>
@@ -163,6 +164,38 @@ Ha… You are the one<br>
 “ありがとう　あなた”<br>
 あとどのくらい　愛されますか<br>
 あとどのくらい　生きられますか<br>
+</h1><br><h3><a href="#あ">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="アカシアの大連">【アカシアの大連】</a>E1-A2<br>
+<br>
+1 アカシヤの大連を　<ruby><rb>訪</rb><rt>たず</rt></ruby>ねてきてみたの<br>
+遠い日の<ruby><rb>幻</rb><rt>まぼろし</rt></ruby>　手<ruby><rb>探</rb><rt>さぐ</rt></ruby>りするように<br>
+<br>
+丘の上から港を　はるか見<ruby><rb>下</rb><rt>お</rt></ruby>ろせば<br>
+<ruby><rb>靄</rb><rt>もや</rt></ruby>に霞む<ruby><rb>波止場</rb><rt>はとば</rt></ruby>を離れて<br>
+大きな船が出る<br>
+<br>
+街のあちらこちらに<br>
+日本の匂いが　<ruby><rb>微</rb><rt>かすか</rt></ruby>に残る<br>
+夢の故郷<br>
+<br>
+2 アカシヤの大連を　歩いて涙ぐむ<br>
+父母が愛して　暮らした街だから<br>
+<br>
+ヤマトホテルのテラスで<br>
+お茶を飲みながら<br>
+若い人のチャイナの言葉を<br>
+聞いてる<ruby><rb>心地</rb><rt>ここち</rt></ruby>よさ<br>
+<br>
+過去は忘れましょうと　希望の小鳥が<br>
+飛び<ruby><rb>交</rb><rt>か</rt></ruby>うような　微笑む街よ<br>
+<br>
+3 恋に傷つきながらも　恋にまた落ちて<br>
+泣いてばかり　いるこの私を<br>
+<ruby><rb>癒</rb><rt>いや</rt></ruby>してくれる街<br>
+<br>
+誰か愛する人と　ここで暮らしたい<br>
+そんな気がする　夢見る街よ<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="亜麻色の髪の乙女">【亜麻色の髪の乙女】</a>A1-A2<br>
