--- a/enkas/お.html
+++ b/enkas/お.html
@@ -8,7 +8,7 @@
 <a href="..\indexenka.html" id="お">Enka Category</a><br><br>
 <h2>
 お<br><br>
-<a href="#Oh I...">Oh I...</a><br>
+<a href="#Oh I…">Oh I…</a><br>
 <a href="#おどるポンポコリン">おどるポンポコリン</a><br>
 <a href="#おもいで酒">おもいで酒</a><br>
 <a href="#おんな港町">おんな港町</a><br>
@@ -21,7 +21,7 @@
 <a href="#男の火祭り">男の火祭り</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="Oh I...">【Oh I...】</a>G1-A2<br>
+<a id="Oh I…">【Oh I…】</a>G1-A2<br>
 <br>
 1 「これでよかったのよ」<br>
 何度も言い聞かせた<br>
