--- a/enkas/さ.html
+++ b/enkas/さ.html
@@ -10,9 +10,9 @@
 さ<br><br>
 <a href="#3年目の浮気">3年目の浮気</a><br>
 <a href="#さあ歩きはじめよう">さあ歩きはじめよう</a><br>
-<a href="#さくら">さくら</a><br>
 <a href="#さくらさくら">さくらさくら</a><br>
 <a href="#さくらんぼ">さくらんぼ</a><br>
+<a href="#さくら（独唱）">さくら（独唱）</a><br>
 <a href="#さそり座の女">さそり座の女</a><br>
 <a href="#桜">桜</a><br>
 <a href="#桜坂">桜坂</a><br>
@@ -95,39 +95,6 @@
 さあ歩き始めよう<br>
 </h1><br><h3><a href="#さ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="さくら">【さくら】</a>A1-E3<br>
-<br>
-1 僕らは　きっと待ってる<br>
-君とまた会える　日々を<br>
-さくら<ruby><rb>並</rb><rt>なみ</rt></ruby>木の道の上で　手を振り叫ぶよ<br>
-<br>
-どんなに　苦しい時も　君は笑って　いるから<br>
-<ruby><rb>挫</rb><rt>くじ</rt></ruby>けそうに　なりかけても　頑張れる気が　したよ<br>
-<br>
-霞みゆく　景色の中に　あの日の唄が　聴こえる<br>
-<br>
-さくら　さくら　今、咲き誇る<br>
-<ruby><rb>刹</rb><rt>せつ</rt></ruby>那に散りゆく運命と知って<br>
-さらば　友よ　旅立ちの<ruby><rb>刻</rb><rt>とき</rt></ruby><br>
-変わらないその想いを　今<br>
-<br>
-2 今なら　言えるだろうか　<ruby><rb>偽</rb><rt>いつわ</rt></ruby>りのない言葉<br>
-輝ける君の未来を　願う　本当の言葉<br>
-<br>
-移りゆく　街はまるで　僕らを　<ruby><rb>急</rb><rt>せ</rt></ruby>かす様に<br>
-<br>
-さくら　さくら　ただ舞い落ちる<br>
-いつか生まれ変わる　<ruby><rb>瞬間</rb><rt>とき</rt></ruby>を信じ<br>
-泣くな　友よ今　<ruby><rb>惜別</rb><rt>せきべつ</rt></ruby>の時<br>
-飾らないあの笑顔で　さあ<br>
-<br>
-3 さくら　さくら　いざ舞い上がれ<br>
-永遠にさんざめく光を浴びて<br>
-さらば　友よまた　この場所で会おう<br>
-さくら舞い散る道の<br>
-さくら舞い散る道の　上で <br>
-</h1><br><h3><a href="#さ">Back to Top</a></h3>
-<br><hr><br><h1>
 <a id="さくらさくら">【さくらさくら】</a>B1-C3<br>
 <br>
 1 さくら　さくら<br>
@@ -196,6 +163,39 @@
 愛し合う2人　いつの時も<br>
 愛し合う2人　いつの時も<br>
 隣どおし　あなたと　あたし　さくらんぼ<br>
+</h1><br><h3><a href="#さ">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="さくら（独唱）">【さくら（独唱）】</a>A1-E3<br>
+<br>
+1 僕らは　きっと待ってる<br>
+君とまた会える　日々を<br>
+さくら<ruby><rb>並</rb><rt>なみ</rt></ruby>木の道の上で　手を振り叫ぶよ<br>
+<br>
+どんなに　苦しい時も　君は笑って　いるから<br>
+<ruby><rb>挫</rb><rt>くじ</rt></ruby>けそうに　なりかけても　頑張れる気が　したよ<br>
+<br>
+霞みゆく　景色の中に　あの日の唄が　聴こえる<br>
+<br>
+さくら　さくら　今、咲き誇る<br>
+<ruby><rb>刹</rb><rt>せつ</rt></ruby>那に散りゆく運命と知って<br>
+さらば　友よ　旅立ちの<ruby><rb>刻</rb><rt>とき</rt></ruby><br>
+変わらないその想いを　今<br>
+<br>
+2 今なら　言えるだろうか　<ruby><rb>偽</rb><rt>いつわ</rt></ruby>りのない言葉<br>
+輝ける君の未来を　願う　本当の言葉<br>
+<br>
+移りゆく　街はまるで　僕らを　<ruby><rb>急</rb><rt>せ</rt></ruby>かす様に<br>
+<br>
+さくら　さくら　ただ舞い落ちる<br>
+いつか生まれ変わる　<ruby><rb>瞬間</rb><rt>とき</rt></ruby>を信じ<br>
+泣くな　友よ今　<ruby><rb>惜別</rb><rt>せきべつ</rt></ruby>の時<br>
+飾らないあの笑顔で　さあ<br>
+<br>
+3 さくら　さくら　いざ舞い上がれ<br>
+永遠にさんざめく光を浴びて<br>
+さらば　友よまた　この場所で会おう<br>
+さくら舞い散る道の<br>
+さくら舞い散る道の　上で <br>
 </h1><br><h3><a href="#さ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="さそり座の女">【さそり座の女】</a>E1-F2<br>
