--- a/enkas/し.html
+++ b/enkas/し.html
@@ -162,13 +162,14 @@ Secret of my heart…<br>
 今日もうたってる　わたしと一緒に歌って！<br>
 </h1><br><h3><a href="#し">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="上海慕情">【上海慕情】</a><br>
+<a id="上海慕情">【上海慕情】</a>E1-C3<br>
 <br>
 1 ああ　恋が灯る街よ<br>
 ねぇ　これが最後の旅さ<br>
 ああ　二人<ruby><rb>外灘</rb><rt>バンド</rt></ruby>見つめ<br>
 西側が過去　東は未来<br>
 渡れない俺を笑ってくれ<br>
+<br>
 愛の光　揺れて上海<br>
 花火消える夜に乾杯<br>
 涙隠すほど君は大人になった<br>
@@ -181,6 +182,7 @@ Secret of my heart…<br>
 ああ　だけどきっとすぐに<br>
 新しい恋　見つけるだろう<br>
 俺のことなんて忘れなよ<br>
+<br>
 愛の光　揺れて上海<br>
 夢を見せてくれた純愛<br>
 少し背伸びした君を変わらず想う<br>
