--- a/enkas/す.html
+++ b/enkas/す.html
@@ -63,7 +63,7 @@
 あなた以外何もいらない<br>
 </h1><br><h3><a href="#す">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="好きな人">【好きな人】</a>B1-A2<br>
+<a id="好きな人">【好きな人】</a>A1-A2<br>
 <br>
 1 好きな人が<ruby><rb>辛</rb><rt>つら</rt></ruby>い時に<br>
 一緒にいてあげられない<br>
