--- a/enkas/た.html
+++ b/enkas/た.html
@@ -15,7 +15,7 @@
 <a href="#達者でナ">達者でナ</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="Time After Time ～花舞う街で～">【Time After Time ～花舞う街で～】</a>G1-E3-升5半音（F作C）-升3半音<br>
+<a id="Time After Time ～花舞う街で～">【Time After Time ～花舞う街で～】</a>G1-C3-升5半音（F作C）-升3半音<br>
 <br>
 1 もしも　君に巡り逢えたら<br>
 二度と　君の手を離さない<br>
