--- a/enkas/ら.html
+++ b/enkas/ら.html
@@ -8,10 +8,10 @@
 <a href="..\indexenka.html" id="ら">Enka Category</a><br><br>
 <h2>
 ら<br><br>
-<a href="#Love is...">Love is...</a><br>
+<a href="#Love is…">Love is…</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="Love is...">【Love is...】</a>C1-E3<br>
+<a id="Love is…">【Love is…】</a>C1-E3<br>
 <br>
 1 You are my only… You are my treasure.<br>
 I'd give you my whole thing, even if you don't want.<br>
