--- a/indexenka.html
+++ b/indexenka.html
@@ -45,7 +45,7 @@
 		<a href="enkas/よ.html">よ</a> 
 		わ
 		を<br>
-		ら
+		<a href="enkas/ら.html">ら</a> 
 		<a href="enkas/り.html">り</a> 
 		<a href="enkas/る.html">る</a> 
 		れ
