--- a/enkas/く.html
+++ b/enkas/く.html
@@ -8,9 +8,42 @@
 <a href="..\indexenka.html" id="く">Enka Category</a><br><br>
 <h2>
 く<br><br>
+<a href="#Glass">Glass</a><br>
 <a href="#唇よ、熱く君を語れ">唇よ、熱く君を語れ</a><br>
 <a href="#空港">空港</a><br>
 </h2>
+<br><hr><br><h1>
+<a id="Glass">【Glass】</a>A1-E3<br>
+<br>
+1 この街は　止まらない<br>
+<ruby><rb>例</rb><rt>たと</rt></ruby>えキミを　強く抱きしめたって<br>
+ぶきようだと　思うだろう<br>
+優しさも<ruby><rb>裏</rb><rt>うら</rt></ruby>がえしで<br>
+<br>
+こんなにも　側にいる　キミに<br>
+<ruby><rb>戸惑</rb><rt>とまど</rt></ruby>ってっているなんて<br>
+一人の時は長すぎて<br>
+<br>
+キミの傍で見る　キミの夢は<br>
+ガラスの心に　音を立てる<br>
+<br>
+2 この街は　時計じかけ<br>
+責めて送る　この<ruby><rb>詩</rb><rt>うた</rt></ruby>を<br>
+<br>
+<ruby><rb>愛</rb><rt>いと</rt></ruby>しさが届いたら　キミに<br>
+開けそうなこの胸の　<ruby><rb>扉</rb><rt>とびら</rt></ruby>を叩いてほしい<br>
+<br>
+つかまえていてね　キミの声は<br>
+ガラスの心に　震えている<br>
+<br>
+3 つかまえていてね　いつまでも<br>
+誰にも心を　開けなくて<br>
+<br>
+キミを抱きしめて　この心は<br>
+壊れそうな<ruby><rb>程</rb><rt>ほど</rt></ruby>　震えている<br>
+<br>
+ガラスのメロディ　伝えたくて<br>
+</h1><br><h3><a href="#く">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="唇よ、熱く君を語れ">【唇よ、熱く君を語れ】</a>G1-C3<br>
 <br>
